# azure-ai-playwright

./: .env.template  .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  README_NEW.md  TESTING_SUMMARY.md  TODO.md  azure.yaml  bing.py  medicaid-rag.py  pyproject.toml  scraper.py
data/: employed-individuals-with-disabilities.txt  ingest-data.py  medicaid-eligibility.txt  medicaid-savings-programs.txt
docs/: BEST_PRACTICES.md  DECISIONS.md  DEPLOYMENT_CHECKLIST.md  LOCAL_DEVELOPMENT.md  POST_DEPLOYMENT_CONFIG.md  QUICK_REFERENCE.md  SESSION_NOTES_2025-08-21.md  SESSION_NOTES_20250821.md  SESSION_NOTES_TEMPLATE.md  agentic_playwright_architecture.drawio
infra/: main.bicep  main.bicepparam  main.json
infra/modules/: ai-foundry.bicep  ai-search.bicep  keyvault.bicep  monitoring.bicep  openai.bicep  storage.bicep  translator.bicep
output/: medicaid_news_20250821_110022.txt
scripts/: check-quota.ps1  cleanup-keyvaults.ps1  configure-env.ps1  deploy-azure.ps1  deploy-models.ps1  populate-secrets.ps1  post-deploy-setup.ps1  setup-complete.ps1  setup-search-index.ps1  validate-deployment.ps1  validate-infrastructure.ps1
src/: bing-search-api.py  bing.py  contact-form-scraper.py  contact-form.py  fill-form.py  form-filling-agent.py  ingest-data.py  medicaid-rag-agent.py  medicaid-rag.py  scraper.py
