[project]
name = "azure-ai-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "azure-search>=1.0.0b2",
    "azure-search-documents>=11.5.3",
    "python-dotenv>=1.1.1",
    "semantic-kernel>=1.35.3",
]
